// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component render empty form component 1`] = `
<div
  className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flexDirection-eqz5dr r-height-i7wkem r-justifyContent-1777fci"
>
  <div
    className="css-view-1dbjc4n r-alignContent-uia4a0 r-alignItems-1awozwy r-display-6koalj r-flexDirection-eqz5dr r-justifyContent-1777fci r-maxWidth-z7pwl0 r-paddingBottom-1mi0q7o r-paddingTop-m611by r-width-13qz1uu"
  >
    <div
      className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-justifyContent-1777fci r-paddingBottom-k8qxaj r-paddingTop-1knelpx"
    >
      <div
        className="css-text-901oao r-fontWeight-vw2c0b"
        dir="auto"
        onClick={[Function]}
        style={
          Object {
            "fontSize": "20px",
          }
        }
      >
        Inicio de sesión
      </div>
    </div>
    <div
      className="css-view-1dbjc4n r-paddingBottom-1mi0q7o r-paddingTop-m611by"
    >
      <input
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect="on"
        className="css-textinput-11aywtz r-borderColor-4yh6xw r-borderRadius-1f0042m r-borderWidth-rs99b7 r-maxWidth-127gp16 r-paddingBottom-1inuy60 r-paddingLeft-1yt7n81 r-paddingRight-ry3cjt r-paddingTop-glunga r-width-13qz1uu"
        dir="auto"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onSelect={[Function]}
        placeholder="Telefono"
        readOnly={false}
        spellCheck={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="css-view-1dbjc4n r-paddingBottom-1mi0q7o r-paddingTop-m611by"
    >
      <input
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect="on"
        className="css-textinput-11aywtz r-borderColor-4yh6xw r-borderRadius-1f0042m r-borderWidth-rs99b7 r-maxWidth-127gp16 r-paddingBottom-1inuy60 r-paddingLeft-1yt7n81 r-paddingRight-ry3cjt r-paddingTop-glunga r-width-13qz1uu"
        dir="auto"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onSelect={[Function]}
        placeholder="Contraseña"
        readOnly={false}
        spellCheck={true}
        type="password"
        value=""
      />
    </div>
    <div
      className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-justifyContent-1777fci r-paddingBottom-1mi0q7o r-paddingTop-m611by r-width-13qz1uu"
    >
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-backgroundColor-oyv1ms r-borderRadius-1xfd6ze r-cursor-1loqt21 r-displayFlex-14n0d7j r-justifyContent-1777fci r-maxWidth-127gp16 r-paddingBottom-xd6kpl r-paddingTop-tskmnb r-touchAction-1otgn73 r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-width-13qz1uu"
        onClick={[Function]}
        onContextMenu={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "WebkitTransitionDuration": "0s",
            "transitionDuration": "0s",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-text-901oao r-color-cqee49 r-fontSize-1b43r93"
          dir="auto"
          onClick={[Function]}
        >
          Iniciar Sesión
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Form component render form component with cellphone 1`] = `
<div
  className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flexDirection-eqz5dr r-height-i7wkem r-justifyContent-1777fci"
>
  <div
    className="css-view-1dbjc4n r-alignContent-uia4a0 r-alignItems-1awozwy r-display-6koalj r-flexDirection-eqz5dr r-justifyContent-1777fci r-maxWidth-z7pwl0 r-paddingBottom-1mi0q7o r-paddingTop-m611by r-width-13qz1uu"
  >
    <div
      className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-justifyContent-1777fci r-paddingBottom-k8qxaj r-paddingTop-1knelpx"
    >
      <div
        className="css-text-901oao r-fontWeight-vw2c0b"
        dir="auto"
        onClick={[Function]}
        style={
          Object {
            "fontSize": "20px",
          }
        }
      >
        Inicio de sesión
      </div>
    </div>
    <div
      className="css-view-1dbjc4n r-paddingBottom-1mi0q7o r-paddingTop-m611by"
    >
      <input
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect="on"
        className="css-textinput-11aywtz r-borderColor-4yh6xw r-borderRadius-1f0042m r-borderWidth-rs99b7 r-maxWidth-127gp16 r-paddingBottom-1inuy60 r-paddingLeft-1yt7n81 r-paddingRight-ry3cjt r-paddingTop-glunga r-width-13qz1uu"
        dir="auto"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onSelect={[Function]}
        placeholder="Telefono"
        readOnly={false}
        spellCheck={true}
        type="text"
        value="+5732485855"
      />
    </div>
    <div
      className="css-view-1dbjc4n r-paddingBottom-1mi0q7o r-paddingTop-m611by"
    >
      <input
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect="on"
        className="css-textinput-11aywtz r-borderColor-4yh6xw r-borderRadius-1f0042m r-borderWidth-rs99b7 r-maxWidth-127gp16 r-paddingBottom-1inuy60 r-paddingLeft-1yt7n81 r-paddingRight-ry3cjt r-paddingTop-glunga r-width-13qz1uu"
        dir="auto"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onSelect={[Function]}
        placeholder="Contraseña"
        readOnly={false}
        spellCheck={true}
        type="password"
        value=""
      />
    </div>
    <div
      className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-justifyContent-1777fci r-paddingBottom-1mi0q7o r-paddingTop-m611by r-width-13qz1uu"
    >
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-backgroundColor-oyv1ms r-borderRadius-1xfd6ze r-cursor-1loqt21 r-displayFlex-14n0d7j r-justifyContent-1777fci r-maxWidth-127gp16 r-paddingBottom-xd6kpl r-paddingTop-tskmnb r-touchAction-1otgn73 r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-width-13qz1uu"
        onClick={[Function]}
        onContextMenu={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "WebkitTransitionDuration": "0s",
            "transitionDuration": "0s",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-text-901oao r-color-cqee49 r-fontSize-1b43r93"
          dir="auto"
          onClick={[Function]}
        >
          Iniciar Sesión
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Form component render form component with error 1`] = `
<div
  className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flexDirection-eqz5dr r-height-i7wkem r-justifyContent-1777fci"
>
  <div
    className="css-view-1dbjc4n r-alignContent-uia4a0 r-alignItems-1awozwy r-display-6koalj r-flexDirection-eqz5dr r-justifyContent-1777fci r-maxWidth-z7pwl0 r-paddingBottom-1mi0q7o r-paddingTop-m611by r-width-13qz1uu"
  >
    <div
      className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-justifyContent-1777fci r-paddingBottom-k8qxaj r-paddingTop-1knelpx"
    >
      <div
        className="css-text-901oao r-fontWeight-vw2c0b"
        dir="auto"
        onClick={[Function]}
        style={
          Object {
            "fontSize": "20px",
          }
        }
      >
        Inicio de sesión
      </div>
    </div>
    <div
      className="css-view-1dbjc4n r-paddingBottom-1mi0q7o r-paddingTop-m611by"
    >
      <input
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect="on"
        className="css-textinput-11aywtz r-borderColor-4yh6xw r-borderRadius-1f0042m r-borderWidth-rs99b7 r-maxWidth-127gp16 r-paddingBottom-1inuy60 r-paddingLeft-1yt7n81 r-paddingRight-ry3cjt r-paddingTop-glunga r-width-13qz1uu"
        dir="auto"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onSelect={[Function]}
        placeholder="Telefono"
        readOnly={false}
        spellCheck={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="css-view-1dbjc4n r-paddingBottom-1mi0q7o r-paddingTop-m611by"
    >
      <input
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect="on"
        className="css-textinput-11aywtz r-borderColor-4yh6xw r-borderRadius-1f0042m r-borderWidth-rs99b7 r-maxWidth-127gp16 r-paddingBottom-1inuy60 r-paddingLeft-1yt7n81 r-paddingRight-ry3cjt r-paddingTop-glunga r-width-13qz1uu"
        dir="auto"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onSelect={[Function]}
        placeholder="Contraseña"
        readOnly={false}
        spellCheck={true}
        type="password"
        value=""
      />
    </div>
    <div
      className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-justifyContent-1777fci r-paddingBottom-1mi0q7o r-paddingTop-m611by r-width-13qz1uu"
    >
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-backgroundColor-oyv1ms r-borderRadius-1xfd6ze r-cursor-1loqt21 r-displayFlex-14n0d7j r-justifyContent-1777fci r-maxWidth-127gp16 r-paddingBottom-xd6kpl r-paddingTop-tskmnb r-touchAction-1otgn73 r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-width-13qz1uu"
        onClick={[Function]}
        onContextMenu={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "WebkitTransitionDuration": "0s",
            "transitionDuration": "0s",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-text-901oao r-color-cqee49 r-fontSize-1b43r93"
          dir="auto"
          onClick={[Function]}
        >
          Iniciar Sesión
        </div>
      </div>
    </div>
    <div
      className="css-view-1dbjc4n r-paddingBottom-1mi0q7o r-paddingTop-m611by"
    >
      <div
        className="css-text-901oao r-fontSize-1b43r93"
        dir="auto"
        onClick={[Function]}
      >
        Hubo un error, intenta mas tarde
      </div>
    </div>
  </div>
</div>
`;

exports[`Form component render form component with password 1`] = `
<div
  className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flexDirection-eqz5dr r-height-i7wkem r-justifyContent-1777fci"
>
  <div
    className="css-view-1dbjc4n r-alignContent-uia4a0 r-alignItems-1awozwy r-display-6koalj r-flexDirection-eqz5dr r-justifyContent-1777fci r-maxWidth-z7pwl0 r-paddingBottom-1mi0q7o r-paddingTop-m611by r-width-13qz1uu"
  >
    <div
      className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-justifyContent-1777fci r-paddingBottom-k8qxaj r-paddingTop-1knelpx"
    >
      <div
        className="css-text-901oao r-fontWeight-vw2c0b"
        dir="auto"
        onClick={[Function]}
        style={
          Object {
            "fontSize": "20px",
          }
        }
      >
        Inicio de sesión
      </div>
    </div>
    <div
      className="css-view-1dbjc4n r-paddingBottom-1mi0q7o r-paddingTop-m611by"
    >
      <input
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect="on"
        className="css-textinput-11aywtz r-borderColor-4yh6xw r-borderRadius-1f0042m r-borderWidth-rs99b7 r-maxWidth-127gp16 r-paddingBottom-1inuy60 r-paddingLeft-1yt7n81 r-paddingRight-ry3cjt r-paddingTop-glunga r-width-13qz1uu"
        dir="auto"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onSelect={[Function]}
        placeholder="Telefono"
        readOnly={false}
        spellCheck={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="css-view-1dbjc4n r-paddingBottom-1mi0q7o r-paddingTop-m611by"
    >
      <input
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect="on"
        className="css-textinput-11aywtz r-borderColor-4yh6xw r-borderRadius-1f0042m r-borderWidth-rs99b7 r-maxWidth-127gp16 r-paddingBottom-1inuy60 r-paddingLeft-1yt7n81 r-paddingRight-ry3cjt r-paddingTop-glunga r-width-13qz1uu"
        dir="auto"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onSelect={[Function]}
        placeholder="Contraseña"
        readOnly={false}
        spellCheck={true}
        type="password"
        value="123456789"
      />
    </div>
    <div
      className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-justifyContent-1777fci r-paddingBottom-1mi0q7o r-paddingTop-m611by r-width-13qz1uu"
    >
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-backgroundColor-oyv1ms r-borderRadius-1xfd6ze r-cursor-1loqt21 r-displayFlex-14n0d7j r-justifyContent-1777fci r-maxWidth-127gp16 r-paddingBottom-xd6kpl r-paddingTop-tskmnb r-touchAction-1otgn73 r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-width-13qz1uu"
        onClick={[Function]}
        onContextMenu={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "WebkitTransitionDuration": "0s",
            "transitionDuration": "0s",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-text-901oao r-color-cqee49 r-fontSize-1b43r93"
          dir="auto"
          onClick={[Function]}
        >
          Iniciar Sesión
        </div>
      </div>
    </div>
  </div>
</div>
`;
